[package]
name = "wasmcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
servertests = []
gui = ["datapack_vm/gui"]

[[bin]]
name = "wasmcraft"
path = "src/bin/main.rs"

[lib]
name = "wasmcraft"
path = "src/lib.rs"

[dependencies]
wasmparser = "*"
datapack_vm = { git = "https://github.com/SuperTails/datapackvm.git", branch = "interning" }
#datapack_vm = { path = "../../datapackvm" }
datapack_common = { git = "https://github.com/SuperTails/datapack_common.git" }
#datapack_common = { path = "../../datapack_common" }
command_parser = { git = "https://github.com/Inky-developer/command-parser" }
hashers = "*"
clap = { version = "3.2.11", features = ["derive"] }
bit-set = "0.5.3"

[dev-dependencies]
rcon = { version = "0", features = ["rt-async-std"] }
async-std = "*"
async-recursion = "1.0"